--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Yan Mello",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server.js",
-    "serve":"peerjs --port=3001"
+    "dev": "nodemon src/server.ts",
+    "serve": "peerjs --port=3001"
   },
   "dependencies": {
     "ejs": "^3.1.5",
@@ -17,6 +17,12 @@
     "uuid": "^8.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@types/express": "^4.17.7",
+    "@types/node": "^14.6.0",
+    "@types/socket.io": "^2.1.11",
+    "@types/uuid": "^8.3.0",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^4.0.2"
   }
 }
